# ai-agent

./: .gitignore  CPP_CONSOLE_README.md  DEPLOYMENT_GUIDE.md  DIRECT_MESSAGE_TEST.md  Dockerfile.embedded  PROTOCOL_DEBUG.md  README.md  SIMPLIFIED_PROTOCOL.md  TCP_PROTOCOL_README.md  TROUBLESHOOTING.md  build_cpp.bat  build_cpp.sh  build_embedded.sh  build_integrated.bat  build_integrated.sh  build_macos_simple.sh  build_nodeonly.sh  build_simple.sh  compile.sh  compile_wx.sh  docker-compose.yml  package-lock.json  package.json  setup-stagehand.sh  start-dev.bat  start-dev.sh  test-parse-profile.js  tsconfig.json
demo/: water.html
dist2/: 168.index.js  468.index.js  560.index.js  773.index.js  946.index.js
file/: logs.rar  resume-analysis-result.txt
src/client/: package.json  rsbuild.config.ts  tsconfig.json
src/client/public/: index.html
src/client/src/: App.tsx  index.css
src/cpp/: CMakeCache.txt  CMakeLists.txt  CppNodeApp  EmbeddedNodeRunner.cpp  EmbeddedNodeRunner.h  Makefile  cmake_install.cmake  main.cpp  resources.qrc  simple_client.cpp  tcpclient.cpp  tcpclient.h  wx_client.cpp
src/cpp/CppNodeApp_autogen/: mocs_compilation.cpp
src/cpp/CppNodeApp_autogen/EWIEGA46WW/: moc_EmbeddedNodeRunner.cpp  moc_EmbeddedNodeRunner.cpp.d  moc_tcpclient.cpp  moc_tcpclient.cpp.d
src/cpp/CppNodeApp_autogen/UYX5XTB5RZ/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/cpp/CppNodeApp_autogen/include/: ui_mainwindow.h
src/cpp/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/node/: .eslintrc.json  BUILD-SOLUTION.md  PATH-ALIAS-GUIDE.md  README-WORKER-ENV.md  TSC-PATH-ALIAS-GUIDE.md  agent.ts  build.js  build.mjs  env.ts  esbuild.config.js  message.ts  nodemon.json  package.json  server.ts  tcp-server.ts  test-emitter.js  tsc-alias.config.json  tsconfig.json  web-server.ts
src/node/computer-use/: operator.ts
src/node/docs/: BUILD.md  ESBUILD_WINDOWS.md
src/node/prompt/: browser-use.txt
src/node/scripts/: build-packages.bat  (+6 more)
src/prompt/: aware.txt  doubao.txt
src/test/: index.js  modal2.js  model.sh  model2.sh
test/: process.js
(+84 files in other folders)
